--- a/accueil/m08.html
+++ b/accueil/m08.html
@@ -3,14 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Accueil - Anticoste - m08</title>
+    <title>Accueil - Anticoste - M08</title>
+    <meta name="description" content="Anticoste est un corpus de
+l’artiste Richard Baillargeon assemblé et exposé pour la première fois
+en 2012. Le projet Web collaboratif est une adaptation du volet
+numérique de l’exposition originale. Il propose la découverte des
+différentes facettes de l’île en 7 récits. Il est réalisé par les étudiants
+de première année du programme Techniques d’intégration
+multimédia du Cégep de Sainte-Foy, cohorte 2020-2021. ">
+    <meta name="keywords" content="Anticoste, Richard Baillargeon,
+Techniques d’intégration multimédia, Cégep de Sainte-Foy, récits
+numérique">
+    <meta name="author" content="Richard Baillargeon">
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/m08/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/m08/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/m08/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../images/m08/favicon/site.webmanifest">
+    <link rel="mask-icon" href="../images/m08/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     <!-- Feuille de styles commune à tous -->
-    <link rel="stylesheet" href="../css/styles.css">
-    <!-- Ajuster le href pour pointer sur la feuille de styles
-    du mandat en changeant le suffixe m08 -->
-    <link rel="stylesheet" href="../css/styles-m08.css">
+   <!-- <link rel="stylesheet" href="../css/styles.css">
+    &lt;!&ndash; Ajuster le href pour pointer sur la feuille de styles
+    du mandat en changeant le suffixe m07 &ndash;&gt;
+    <link rel="stylesheet" href="../css/styles-m08.css">-->
+    <link rel="stylesheet" href="../css/styles-m08.min.css">
 </head>
-<!-- Ajuster le nom de classe m08 pour correspondre à votre mandat m01 à m13 -->
+<!-- Ajuster le nom de classe m07 pour correspondre à votre mandat m01 à m13 -->
 <body class="m08">
 <!-- Bandeau d'entête et menu principal-->
 <header role="banner">
@@ -19,12 +38,12 @@
             <li class="nav__listItem">
                 <a class="nav__link"
                    href="../accueil/m08.html">Anticoste</a></li>
-            <li class="nav__listItem">
-                <a class="nav__link nav__link--active"
+            <li class="nav__listItem nav__roseDesVents">
+                <a class="nav__link"
                    href="../rose-des-vents/m08.html">
-                    <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="icone--roseDesVents" width="90" height="90" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <title>Rose des vents</title>
-                        <path d="M62.5 37.5L50 0L37.5 37.5L0 50L37.5 62.5L50 100L62.5 62.5L100 50L62.5 37.5ZM16.6667 50L41.6667 41.6667L45.8333 50H16.6667ZM50 83.3333L41.6667 58.3333L50 54.1667V83.3333ZM50 16.6667L58.3333 41.6667L50 45.8333V16.6667ZM58.3333 58.3333L54.1667 50H83.3333L58.3333 58.3333ZM36.25 72.0833L20.8333 79.1667L27.9167 63.75L34.5833 65.8333L36.25 72.0833ZM72.0833 63.75L79.1667 79.1667L63.75 72.0833L65.8333 65.4167L72.0833 63.75ZM27.9167 36.25L20.8333 20.8333L36.25 27.9167L34.1667 34.1667L27.9167 36.25ZM63.75 27.9167L79.1667 20.8333L72.0833 36.25L65.4167 34.1667L63.75 27.9167Z" fill="#996A0F"/>
+                        <path class="icone--roseDesVents" d="M62.5 37.5L50 0L37.5 37.5L0 50L37.5 62.5L50 100L62.5 62.5L100 50L62.5 37.5ZM16.6667 50L41.6667 41.6667L45.8333 50H16.6667ZM50 83.3333L41.6667 58.3333L50 54.1667V83.3333ZM50 16.6667L58.3333 41.6667L50 45.8333V16.6667ZM58.3333 58.3333L54.1667 50H83.3333L58.3333 58.3333ZM36.25 72.0833L20.8333 79.1667L27.9167 63.75L34.5833 65.8333L36.25 72.0833ZM72.0833 63.75L79.1667 79.1667L63.75 72.0833L65.8333 65.4167L72.0833 63.75ZM27.9167 36.25L20.8333 20.8333L36.25 27.9167L34.1667 34.1667L27.9167 36.25ZM63.75 27.9167L79.1667 20.8333L72.0833 36.25L65.4167 34.1667L63.75 27.9167Z" fill="#996A0F"/>
                     </svg>
                 </a></li>
             <li class="nav__listItem">
@@ -33,5 +52,126 @@
         </ul>
     </nav>
 </header>
+<main role="main">
+    <picture class="entete__accueil">
+        <source
+                media="(max-width: 599px)"
+                srcset="../images/m07/entete_accueil_600.jpg 1x, ../images/m07/entete_accueil_1200.jpg 2x">
+        <source
+                media="(min-width: 600px)"
+                srcset="../images/m07/entete_accueil_1200.jpg 1x, ../images/m07/entete_accueil_2400.jpg 2x">
+        <img src="../images/m07/entete_accueil_600.jpg"
+             alt="Vue générale de l'exposition Anticoste">
+    </picture>
+    <section class="intro">
+        <div class="conteneur rangee">
+            <h1 class="titre__accueil cols_6_de_12">Anticoste</h1>
+            <div class="texteIntro__accueil">
+                <p>
+                    Perçue à la fois comme une «terre maudite» en raison des nombreux naufrages qui s’y sont déroulés dans le
+                    passé et un «paradis» pour la grande nature qu’elle incarne, l’Île d’Anticosti n’a cessé de fasciner notre
+                    imaginaire collectif.
+                </p>
+                <p>
+                    L’exposition Anticoste propose une série de regards où divers points de vue sur l’Île et son histoire se
+                    croisent et se confrontent dans une série de récits de l’entre-deux.
+                </p>
+                <p>
+                    Issus des pages racornies, des images perdues, des pierres abandonnées et de toutes ces choses que l’on
+                    croyait oubliées, ces récits nous font naviguer entre chaos et utopie, entre beauté et hideur, entre raison
+                    et déraison.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="septRecitsNum">
+        <div class="conteneur">
+            <div class="texteSeptRecits__accueil rangee">
+                <h2 class="titre__septRecisNum">Sept récits numériques</h2>
+                <p class="p__septRecisNum">
+                    Anticoste présente le volet numérique de l’exposition de l’artiste Richard Baillargeon. La rose des vents
+                    permet de naviguer vers sept récits numériques qui présentent autant de facettes mythiques de l’Île Anticosti.
+                    Chacun de ces récits expose une succession de photographies, de citations et de documents d’archives.
+                </p>
+            </div>
+        </div>
+        <div class="photoSeptRecits">
+            <ul class="recits__list">
+                <li class="recits__listItem">1. Telle une grande baleine</li>
+                <li class="recits__listItem">2. Gardien de lumière</li>
+                <li class="recits__listItem">3. Cimetière du golfe</li>
+                <li class="recits__listItem">4. Le grand châtelain</li>
+                <li class="recits__listItem">5. Nés sur le reef</li>
+                <li class="recits__listItem">6. Des pas et des prises</li>
+                <li class="recits__listItem">7. Sont venus chercher</li>
+            </ul>
+        </div>
+
+    </section>
+    <section class="experieneImmersive">
+        <div class="conteneur">
+            <h2 class="titreExpImm__accueil cols_11_de_12">Expérience immersive</h2>
+            <div class="rangee cols_7_de_12 texteExpImm__accueil">
+                <p>
+                    Afin de vivre pleinement l’expérience immersive du parcours des sept récits, activez l’affichage plein
+                    écran à l’aide des touches illustrées ci-dessous.
+                </p>
+                <dl class="rangee">
+                    <div class="instruction flxRow">
+                        <dt>MacOs&nbsp;:</dt>
+                        <dd>
+                            <kbd aria-label="Touche contrôle">Ctrl ˆ</kbd>
+                            <kbd aria-label="Touche commande">Cmd ⌘</kbd>
+                            <kbd aria-label="Touche F">F</kbd>
+                        </dd>
+                    </div>
+                    <div class="instruction flxRow">
+                        <dt>Windows&nbsp;:</dt>
+                        <dd><kbd aria-label="Touche F11">F11</kbd></dd>
+                    </div>
+                </dl>
+                <p>
+                    Pour revenir en mode d’affichage régulier, appuyer sur la touche «escape».
+                </p>
+                <kbd aria-label="Touche Escape">Échap</kbd>
+                <p>
+                    La navigation entre les pages de chaque récit est possible en utilisant les flèches de votre clavier.
+                </p>
+                <p><a href="../rose-des-vents/m08.html" class="vivreLexperience">Vivre l'expérience</a></p>
+            </div>
+        </div>
+    </section>
+    <picture class="panoramique">
+        <source
+                media="(max-width: 600px)"
+                srcset="../images/m07/panoramique_accueil_600.jpg">
+        <source
+                media="(min-width: 601px)"
+                srcset="../images/m07/panoramique_accueil_1440.jpg">
+        <img src="../images/m07/panoramique_accueil_600.jpg"
+             alt="Vue panoramique de l'île d'Anticosti">
+    </picture>
+</main>
+<footer class="footer__accueil">
+    <nav class="nav nav--menu nav--footer" role="navigation">
+        <ul class="nav__list">
+            <li class="nav__listItem">
+                <a class="nav__link"
+                   href="../accueil/m08.html">Anticoste</a></li>
+            <li class="nav__listItem nav__roseDesVents">
+                <a class="nav__link"
+                   href="../rose-des-vents/m08.html">
+                    <svg class="icone--roseDesVents" width="90" height="90" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <title>Rose des vents</title>
+                        <path class="icone--roseDesVents" d="M62.5 37.5L50 0L37.5 37.5L0 50L37.5 62.5L50 100L62.5 62.5L100 50L62.5 37.5ZM16.6667 50L41.6667 41.6667L45.8333 50H16.6667ZM50 83.3333L41.6667 58.3333L50 54.1667V83.3333ZM50 16.6667L58.3333 41.6667L50 45.8333V16.6667ZM58.3333 58.3333L54.1667 50H83.3333L58.3333 58.3333ZM36.25 72.0833L20.8333 79.1667L27.9167 63.75L34.5833 65.8333L36.25 72.0833ZM72.0833 63.75L79.1667 79.1667L63.75 72.0833L65.8333 65.4167L72.0833 63.75ZM27.9167 36.25L20.8333 20.8333L36.25 27.9167L34.1667 34.1667L27.9167 36.25ZM63.75 27.9167L79.1667 20.8333L72.0833 36.25L65.4167 34.1667L63.75 27.9167Z" fill="#996A0F"/>
+                    </svg>
+                </a></li>
+            <li class="nav__listItem">
+                <a class="nav__link"
+                   href="../credits/m08.html">À propos</a></li>
+        </ul>
+    </nav>
+    <p class="copyright__accueil"><small>Richard Baillargeon @ Tous droits réservés 2021</small></p>
+</footer>
 </body>
 </html>
