--- a/credits/m08.html
+++ b/credits/m08.html
@@ -3,28 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Crédits - Anticoste - m08</title>
+    <title>A propos - Anticoste - m08</title>
+    <meta name="description" content="Anticoste est un corpus de
+l’artiste Richard Baillargeon assemblé et exposé pour la première fois
+en 2012. Le projet Web collaboratif est une adaptation du volet
+numérique de l’exposition originale. Il propose la découverte des
+différentes facettes de l’île en 7 récits. Il est réalisé par les étudiants
+de première année du programme Techniques d’intégration
+multimédia du Cégep de Sainte-Foy, cohorte 2020-2021. ">
+    <meta name="keywords" content="Anticoste, Richard Baillargeon,
+Techniques d’intégration multimédia, Cégep de Sainte-Foy, récits
+numérique">
+    <meta name="author" content="Richard Baillargeon">
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/m08/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/m08/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/m08/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../images/m08/favicon/site.webmanifest">
+    <link rel="mask-icon" href="../images/m08/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     <!-- Feuille de styles commune à tous -->
-    <link rel="stylesheet" href="../css/styles.css">
-    <!-- Ajuster le href pour pointer sur la feuille de styles
-    du mandat en changeant le suffixe m08 -->
-    <link rel="stylesheet" href="../css/styles-m08.css">
+    <!--<link rel="stylesheet" href="../css/styles.css">
+    &lt;!&ndash; Ajuster le href pour pointer sur la feuille de styles
+    du mandat en changeant le suffixe m08 &ndash;&gt;
+    <link rel="stylesheet" href="../css/styles-m08.css">-->
+    <link rel="stylesheet" href="../css/styles-m08.min.css">
 </head>
 <!-- Ajuster le nom de classe m08 pour correspondre à votre mandat m01 à m13 -->
-<body class="m08">
+<body class="m08 credits">
 <!-- Bandeau d'entête et menu principal-->
-<header role="banner" class="">
+<header role="banner">
     <nav class="nav nav--menu" role="navigation">
         <ul class="nav__list">
             <li class="nav__listItem">
                 <a class="nav__link"
                    href="../accueil/m08.html">Anticoste</a></li>
-            <li class="nav__listItem">
-                <a class="nav__link nav__link--active"
+            <li class="nav__listItem nav__roseDesVents">
+                <a class="nav__link"
                    href="../rose-des-vents/m08.html">
-                    <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="icone--roseDesVents" width="90" height="90" viewBox="0 0 100 100" fill="none"
+                         xmlns="http://www.w3.org/2000/svg">
                         <title>Rose des vents</title>
-                        <path d="M62.5 37.5L50 0L37.5 37.5L0 50L37.5 62.5L50 100L62.5 62.5L100 50L62.5 37.5ZM16.6667 50L41.6667 41.6667L45.8333 50H16.6667ZM50 83.3333L41.6667 58.3333L50 54.1667V83.3333ZM50 16.6667L58.3333 41.6667L50 45.8333V16.6667ZM58.3333 58.3333L54.1667 50H83.3333L58.3333 58.3333ZM36.25 72.0833L20.8333 79.1667L27.9167 63.75L34.5833 65.8333L36.25 72.0833ZM72.0833 63.75L79.1667 79.1667L63.75 72.0833L65.8333 65.4167L72.0833 63.75ZM27.9167 36.25L20.8333 20.8333L36.25 27.9167L34.1667 34.1667L27.9167 36.25ZM63.75 27.9167L79.1667 20.8333L72.0833 36.25L65.4167 34.1667L63.75 27.9167Z" fill="#996A0F"/>
+                        <path class="icone--roseDesVents"
+                              d="M62.5 37.5L50 0L37.5 37.5L0 50L37.5 62.5L50 100L62.5 62.5L100 50L62.5 37.5ZM16.6667 50L41.6667 41.6667L45.8333 50H16.6667ZM50 83.3333L41.6667 58.3333L50 54.1667V83.3333ZM50 16.6667L58.3333 41.6667L50 45.8333V16.6667ZM58.3333 58.3333L54.1667 50H83.3333L58.3333 58.3333ZM36.25 72.0833L20.8333 79.1667L27.9167 63.75L34.5833 65.8333L36.25 72.0833ZM72.0833 63.75L79.1667 79.1667L63.75 72.0833L65.8333 65.4167L72.0833 63.75ZM27.9167 36.25L20.8333 20.8333L36.25 27.9167L34.1667 34.1667L27.9167 36.25ZM63.75 27.9167L79.1667 20.8333L72.0833 36.25L65.4167 34.1667L63.75 27.9167Z"
+                              fill="#996A0F"/>
                     </svg>
                 </a></li>
             <li class="nav__listItem">
@@ -33,73 +55,114 @@
         </ul>
     </nav>
 </header>
-<main>
-    <div class="conteneur">
-    <h1 class="h1_credit">À propos</h1>
-    <h2 class="h2_credit">Remerciements</h2>
-    <p class="p_credit">L’exposition Anticoste a été réalisée dans le cadre d’un projet de recherche-création subventionné par le Fonds de recherche Société et culture (Québec). L’artiste tient à remercier la Division de la gestion de documents et des archives de l’Université de Montréal, la Direction des services aux usagers et aux partenaires de Bibliothèque et Archives nationales du Québec, le service de la Gestion des documents administratifs et archives historiques de l’Université Laval, Bibliothèque et archives Canada, ainsi que Simon Beauregard et Lisanne Nadeau. Que soit également remerciée la Sépaq-Anticosti(<a href="https://www.sepaq.com/sepaq-anticosti/">https://www.sepaq.com/sepaq-anticosti/</a> ) qui, à l’été 2011, a facilité le séjour et les déplacements sur l’île.</p>
-    <p class="p_credit">Également, de très chaleureux remerciements à Audrey Lahaie et à Sévryna Martel-Lupien qui, à titre d’auxiliaires de recherche, ont contribué de nombreuses manières au projet d’exposition, à Alain Fournier, technicien au Laboratoire intégré de tirage et d’impression numérique de l’École des arts visuels(<a href="https://www.art.ulaval.ca/">https://www.art.ulaval.ca/</a> ), pour les impressions numériques et leur grande qualité. Remerciements aussi au Centre VU(<a href="https://vuphoto.org/fr/">https://vuphoto.org/fr/</a>), à l’atelier de L’œil de Poisson(<a href="https://www.oeildepoisson.com/">https://www.oeildepoisson.com/</a> ), ainsi qu’au centre GéoStat de la Bibliothèque de l’Université Laval(<a href="https://www.bibl.ulaval.ca/services/centregeostat">https://www.bibl.ulaval.ca/services/centregeostat</a> ).</p>
-    <h2 class="h2_credit" >Crédits</h2>
-    <h3 class="h3_credit">Oeuvre de Richard Baillargeon</h3>
-    <p class="p_credit">Camille Marceau</p>
-    <h3 class="h3_credit">Intégration multimédia </h3>
-    <p class="p_credit">Les étudiants de première année du programme Techniques d’intégration multimédia du
-        Cégep de Sainte-Foy, cohorte 2020-2021.<br>
-        [Tristanbernard](https://github.com/Tristanbernard)<br>
-        [thomaschevarie](https://github.com/thomaschevarie)<br>
-        [jeffduval](https://jeffduval.github.io/cv/)<br>
-        [ferlandalex](https://github.com/ferlandalex/)<br>
-        [amelielarouche](https://github.com/amelielarouche)<br>
-        [camillemarceau07](https://github.com/camillemarceau07)<br>
-        [leonardoog](https://github.com/leonardoog)<br>
-        [lounaparron](https://github.com/lounaparron)<br>
-        [LefebvreSImon](https://github.com/LefebvreSImon)<br>
-        [JasminMartel](https://github.com/JasminMartel)<br>
-        [Lauryannbelanger](https://github.com/Lauryannbelanger)<br>
-        [Wahza](https://github.com/Wahza)<br>
-        [vincent-hebert](https://github.com/vincent-hebert)<br>
-        [Jennyfercaron](https://github.com/Jennyfercaron)<br>
-        [LarochelleGabriel](https://github.com/LarochelleGabriel)<br>
-        [Pllarochelle](https://github.com/Pllarochelle)<br>
-        [olivierLemay](https://github.com/olivierLemay)<br>
-        [Daphneemartel](https://github.com/Daphneemartel)<br>
-        [itsoliroy](https://github.com/itsoliroy)<br>
-        [mtrubert](https://github.com/mtrubert)<br>
-        [rafael-m-richard](https://github.com/rafael-m-richard)<br>
-        [Pierrejr675](https://github.com/Pierrejr675)<br>
-        [maximemauffre](https://github.com/maximemauffre)<br>
-    </p>
-    <h3 class="h3_credit">Support institutionnel </h3>
-    <p class="p_credit">École des arts visuels, Université Laval
-        Centre GéoStat, Bibliothèque de l’Université Laval
-        Division de la gestion de documents et des archives, Université de Montréal
-        Bibliothèque et Archives nationales du Québec
-        Gestion des documents administratifs et archives historiques, Université Laval
-        Sépaq-Anticosti
-    </p>
-        <img class="img_credit" src="../images/m07/logo_fondRecherche%201.png" alt="Logo fond de recherche">
+<main class="conteneur credits_contenus">
+    <div class="texte_credits">
+        <h1 class="h1_credit">À propos</h1>
+        <h2 class="h2_credit">Remerciements</h2>
+        <p class="p_credit">
+            L’exposition <i>Anticoste</i> a été réalisée dans le cadre d’un projet de recherche-création subventionné
+            par le
+            <i>Fonds de recherche Société et culture</i> (Québec). L’artiste tient à remercier la <i>Division de la
+            gestion de
+            documents et des archives de l’Université de Montréal</i>, <i>la Direction des services aux usagers et aux
+            partenaires de Bibliothèque et Archives nationales du Québec</i>, le service de la <i>Gestion des documents
+            administratifs et archives historiques de l’Université Laval</i>, <i>Bibliothèque et archives Canada</i>,
+            ainsi que
+            Simon Beauregard et Lisanne Nadeau. Que soit également remerciée la
+            <a href="https://www.sepaq.com/sepaq-anticosti/">Sépaq-Anticosti</a> qui, à l’été
+            2011, a facilité le séjour et les déplacements sur l’île.
+        </p>
+        <p class="p_credit">Également, de très chaleureux remerciements à Audrey Lahaie et à Sévryna Martel-Lupien qui,
+            à titre d’auxiliaires de recherche, ont contribué de nombreuses manières au projet d’exposition, à Alain
+            Fournier, technicien au Laboratoire intégré de tirage et d’impression numérique de
+            l’<a href="https://www.art.ulaval.ca/">École des arts visuels</a>, pour les impressions numériques et
+            leur grande qualité. Remerciements aussi au <a href="https://vuphoto.org/fr/">Centre VU</a>,
+            à l’atelier de <a href="https://www.oeildepoisson.com/">L’œil de Poisson</a>,
+            ainsi qu’au <a href="https://www.bibl.ulaval.ca/services/centregeostat">centre GéoStat de la Bibliothèque de
+                l’Université Laval</a>.
+        </p>
+        <picture class="logoFondRecherche">
+            <source
+                    media="(max-width: 600px)"
+                    srcset="../images/m07/logo_fondRecherche_174.png">
+            <source
+                    media="(min-width: 601px)"
+                    srcset="../images/m07/logo_fondRecherche_230.png">
+            <img src="../images/m07/logo_fondRecherche_174.png"
+                 alt="Logo Fonds de recherche Société et culture Québec">
+        </picture>
+        <h2 class="h2_credit">Crédits</h2>
+        <h3 class="h3_credit">Oeuvre de Richard Baillargeon</h3>
+        <img class="ligne" src="../images/m07/ligne.png" alt="">
+        <p class="p_credit">Assisté par Audrey Lahaie et Sévryna Martel-Lupien</p>
+        <h3 class="h3_credit">Conception visuelle</h3>
+        <img class="ligne" src="../images/m07/ligne.png" alt="">
+        <p class="p_credit">Camille Marceau</p>
+        <h3 class="h3_credit">Intégration multimédia </h3>
+        <img class="ligne" src="../images/m07/ligne.png" alt="">
+        <p class="p_credit">
+            Les étudiants de première année du programme Techniques d’intégration multimédia du
+            Cégep de Sainte-Foy, cohorte 2020-2021.<br>
+            <a href="https://github.com/Tristanbernard">[Tristanbernard]<br></a>
+            <a href="https://github.com/thomaschevarie">[thomaschevarie]<br></a>
+            <a href="https://jeffduval.github.io/cv/">[jeffduval]<br></a>
+            <a href="https://github.com/ferlandalex/">[ferlandalex]<br></a>
+            <a href="https://github.com/amelielarouche">[amelielarouche]<br></a>
+            <a href="https://github.com/camillemarceau07">[camillemarceau07]<br></a>
+            <a href="https://github.com/leonardoog">[leonardoog]<br></a>
+            <a href="https://github.com/lounaparron">[lounaparron]<br></a>
+            <a href="https://github.com/LefebvreSImon">[LefebvreSImon]<br></a>
+            <a href="https://github.com/JasminMartel">[JasminMartel]<br></a>
+            <a href="https://github.com/Lauryannbelanger">[Lauryannbelanger]<br></a>
+            <a href="https://github.com/Wahza">[Wahza]<br></a>
+            <a href="https://github.com/vincent-hebert">[vincent-hebert]<br></a>
+            <a href="https://github.com/Jennyfercaron">[Jennyfercaron]<br></a>
+            <a href="https://github.com/LarochelleGabriel">[LarochelleGabriel]<br></a>
+            <a href="https://github.com/Pllarochelle">[Pllarochelle]<br></a>
+            <a href="https://github.com/olivierLemay">[olivierLemay]<br></a>
+            <a href="https://github.com/Daphneemartel">[Daphneemartel]<br></a>
+            <a href="https://github.com/itsoliroy">[itsoliroy]<br></a>
+            <a href="https://github.com/mtrubert">[mtrubert]<br></a>
+            <a href="https://github.com/rafael-m-richard">[rafael-m-richard]<br></a>
+            <a href="https://github.com/Pierrejr675">[Pierrejr675]<br></a>
+            <a href="https://github.com/maximemauffre">[maximemauffre]<br></a>
+            <br>
+        </p>
+        <h3 class="h3_credit">Support institutionnel </h3>
+        <img class="ligne" src="../images/m07/ligne.png" alt="">
+        <p class="p_credit">École des arts visuels, Université Laval
+            Centre GéoStat, Bibliothèque de l’Université Laval
+            Division de la gestion de documents et des archives, Université de Montréal
+            Bibliothèque et Archives nationales du Québec
+            Gestion des documents administratifs et archives historiques, Université Laval
+            Sépaq-Anticosti
+        </p>
     </div>
+
 </main>
-<footer class="footer_credit">
-    <nav class="nav nav--menu" role="navigation">
+<footer class="footer__accueil">
+    <nav class="nav nav--menu nav--footer" role="navigation">
         <ul class="nav__list">
             <li class="nav__listItem">
                 <a class="nav__link"
                    href="../accueil/m08.html">Anticoste</a></li>
-            <li class="nav__listItem">
+            <li class="nav__listItem nav__roseDesVents">
                 <a class="nav__link"
                    href="../rose-des-vents/m08.html">
-                    <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="icone--roseDesVents icone--roseDesVents__accueil" width="90" height="90"
+                         viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <title>Rose des vents</title>
-                        <path d="M62.5 37.5L50 0L37.5 37.5L0 50L37.5 62.5L50 100L62.5 62.5L100 50L62.5 37.5ZM16.6667 50L41.6667 41.6667L45.8333 50H16.6667ZM50 83.3333L41.6667 58.3333L50 54.1667V83.3333ZM50 16.6667L58.3333 41.6667L50 45.8333V16.6667ZM58.3333 58.3333L54.1667 50H83.3333L58.3333 58.3333ZM36.25 72.0833L20.8333 79.1667L27.9167 63.75L34.5833 65.8333L36.25 72.0833ZM72.0833 63.75L79.1667 79.1667L63.75 72.0833L65.8333 65.4167L72.0833 63.75ZM27.9167 36.25L20.8333 20.8333L36.25 27.9167L34.1667 34.1667L27.9167 36.25ZM63.75 27.9167L79.1667 20.8333L72.0833 36.25L65.4167 34.1667L63.75 27.9167Z" fill="#996A0F"/>
+                        <path class="icone--roseDesVents"
+                              d="M62.5 37.5L50 0L37.5 37.5L0 50L37.5 62.5L50 100L62.5 62.5L100 50L62.5 37.5ZM16.6667 50L41.6667 41.6667L45.8333 50H16.6667ZM50 83.3333L41.6667 58.3333L50 54.1667V83.3333ZM50 16.6667L58.3333 41.6667L50 45.8333V16.6667ZM58.3333 58.3333L54.1667 50H83.3333L58.3333 58.3333ZM36.25 72.0833L20.8333 79.1667L27.9167 63.75L34.5833 65.8333L36.25 72.0833ZM72.0833 63.75L79.1667 79.1667L63.75 72.0833L65.8333 65.4167L72.0833 63.75ZM27.9167 36.25L20.8333 20.8333L36.25 27.9167L34.1667 34.1667L27.9167 36.25ZM63.75 27.9167L79.1667 20.8333L72.0833 36.25L65.4167 34.1667L63.75 27.9167Z"
+                              fill="#996A0F"/>
                     </svg>
                 </a></li>
             <li class="nav__listItem">
-                <a class="nav__link nav__link--active"
-                   href="../credits/m08.html">Crédits</a></li>
+                <a class="nav__link"
+                   href="../credits/m08.html">À propos</a></li>
         </ul>
     </nav>
-    <p><small>Richard Baillargeon @ Tous droits réservés 2021</small></p>
+    <p class="copyright__accueil"><small>Richard Baillargeon @ Tous droits réservés 2021</small></p>
 </footer>
 </body>
 </html>
