--- a/rose-des-vents/m08.html
+++ b/rose-des-vents/m08.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Rose des vents - Anticoste - m08</title>
     <!-- Feuille de styles commune à tous -->
-    <link rel="stylesheet" href="../css/styles.css">
-    <!-- Ajuster le href pour pointer sur la feuille de styles
-    du mandat en changeant le suffixe m08 -->
-    <link rel="stylesheet" href="../css/styles-m08.css">
+    <!--<link rel="stylesheet" href="../css/styles.css">
+    &lt;!&ndash; Ajuster le href pour pointer sur la feuille de styles
+    du mandat en changeant le suffixe m08 &ndash;&gt;
+    <link rel="stylesheet" href="../css/styles-m08.css">-->
+    <link rel="stylesheet" href="../css/styles-m08.min.css">
 </head>
 <!-- Ajuster le nom de classe m08 pour correspondre à votre mandat m01 à m13 -->
 <body class="rose-des-vents m08">
